# test-payments-processor

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py  models.py  seed.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 0ae8f43ee202_add_registrations_table.py  16d85ef96522_add_trips_table.py  cf2f6854f0bb_add_users_table.py  f16277d6afd4_add_payments_table.py  f8deaa7682e5_add_schools_table.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: payments.py  registrations.py  schools.py  trips.py  users.py
backend/app/api/services/: payments.py  registrations.py  schools.py  trips.py  users.py
backend/app/core/: config.py  db.py
backend/app/legacy/: payment_processor.py
backend/scripts/: prestart.sh  test.sh
backend/tests/: conftest.py
backend/tests/api/: test_payments.py  test_payments_concurrency.py  test_registrations.py  test_schools.py  test_trips.py  test_users.py
backend/tests/core/: test_cascading_deletes.py
backend/tests/legacy/: test_payment_processor.py
backend/tests/services/: test_payments.py  test_registrations.py  test_school.py  test_trips.py  test_user.py
backend/tests/utils/: payment.py  registration.py  school.py  trip.py  user.py  utils.py
frontend/: .prettierignore  Dockerfile  eslint.config.mjs  openapi-ts.config.ts  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
frontend/components/: app-sidebar.tsx  (+2 more)
scripts/: generate-openapi.sh
(+45 files in other folders)
