[project]
name = "backend"
version = "0.1.0"
description = "Payments service"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.132.0",
    "loguru>=0.7.3",
    "psycopg[binary]<4.0.0,>=3.1.13",
    "pwdlib>=0.3.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.11.0",
    "sqlmodel>=0.0.37",
    "pwdlib[argon2,bcrypt]>=0.3.0",
]

[dependency-groups]
dev = [
    "pytest<8.0.0,>=7.4.3",
    "mypy<2.0.0,>=1.8.0",
    "ruff<1.0.0,>=0.2.2",
    "coverage<8.0.0,>=7.4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[[tool.mypy.overrides]]
module = "app.legacy.*"
ignore_errors = true

[tool.ruff]
target-version = "py312"
exclude = ["alembic"]

[tool.coverage.run]
source = ["app"]
dynamic_context = "test_function"
omit = ["app/seed.py"]

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true
